fix: use display none instead visibility

--- a/blocks/popup/_visible/popup_visible.css
+++ b/blocks/popup/_visible/popup_visible.css
@@ -1,3 +1,3 @@
 .popup_visible {
-  visibility: visible;
+  display: flex;
 }
