--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,7 +1,6 @@
 .popup {
   position: fixed;
-  visibility: hidden;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   top: 0;
